Aparto tema de exposición: Sistemas Operativos de Tiempo Real

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -11,10 +11,11 @@
   como lo refleja la rúbrica, obtiene una calificación un poco más alta)
   el que ustedes me planteen los temas de su interés.
 
-  |------------+------------------------------------------------------------------------------------------------+---------------------------------+---------+-------------------------------------+------------------------+------------+---|
-  |      Fecha | Tema                                                                                           | Integrantes                     | Video   | Documentos                          | Preguntas              | Evaluación |   |
-  |------------+------------------------------------------------------------------------------------------------+---------------------------------+---------+-------------------------------------+------------------------+------------+---|
-  |------------+------------------------------------------------------------------------------------------------+---------------------------------+---------+-------------------------------------+------------------------+------------+---|
+  |-------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------+---|
+  | Fecha | Tema                               | Integrantes                                                | Video | Documentos | Preguntas | Evaluación |   |
+  |-------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------+---|
+  |       | Sistemas Operativos de Tiempo Real | David Emilio Nava Benítez y David Emmanuel Tavera Castillo |       |            |           |            |   |
+  |-------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------+---|
   #+TBLFM: 
 
 * Rúbrica de evaluación
