Corrijo marcado erróneo

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -52,11 +52,11 @@
 ** Criterios de evaluación por el docente
 
 
-| Criterio                                  | Excelente (100%)                                                                                               | Satisfactorio (70%)                                                                                       | Deficiente (40% o menos)                                                       | Peso |
-|-------------------------------------------+----------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------|
-| **1. Contenido Técnico y Profundidad**    | Explica conceptos clave con precisión, usa 3+ ejemplos técnicos bien desarrollados y relaciona con la materia. | Explicaciones correctas pero poco profundas, usa 1-2 ejemplos sin mucho análisis.                         | Definiciones imprecisas, sin ejemplos técnicos o sin relación con la materia.  |  30% |
-| **2. Fuentes Bibliográficas**             | 3+ fuentes formales (investigación, libros académicos), bien citadas y analizadas.                             | 1-2 fuentes formales con referencias parciales o poco integradas.                                         | Fuentes no formales predominan o falta citar adecuadamente.                    |  15% |
-| **3. Organización**                       | Introducción, desarrollo y conclusión bien definidas; información fluida y lógica.                             | Presenta estructura pero con fallas en la secuencia o transiciones.                                       | Desorden, falta alguna sección clave o sin lógica clara.                       |  15% |
-| **4. Comunicación Oral y Uso del Tiempo** | Habla con fluidez, volumen y ritmo adecuados; usa términos precisos; no lee guion; exposición dura 15-20 min.  | Dicción aceptable, lee ocasionalmente, términos técnicos poco explicados; tiempo entre 12-15 o 20-23 min. | Lee constantemente, voz poco clara, mal uso de términos; tiempo <12 o >23 min. |  25% |
-| **5. Uso de Recursos Visuales**           | Diapositivas y gráficos claros, bien diseñados y relevantes para la exposición.                                | Uso de recursos con fallos en claridad o diseño; algo de sobrecarga de texto.                             | No usa recursos o estos son confusos y poco útiles.                            |  15% |
-|-------------------------------------------+----------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------|
+| Criterio                                | Excelente (100%)                                                                                               | Satisfactorio (70%)                                                                                       | Deficiente (40% o menos)                                                       | Peso |
+|-----------------------------------------+----------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------|
+| *1. Contenido Técnico y Profundidad*    | Explica conceptos clave con precisión, usa 3+ ejemplos técnicos bien desarrollados y relaciona con la materia. | Explicaciones correctas pero poco profundas, usa 1-2 ejemplos sin mucho análisis.                         | Definiciones imprecisas, sin ejemplos técnicos o sin relación con la materia.  |  30% |
+| *2. Fuentes Bibliográficas*             | 3+ fuentes formales (investigación, libros académicos), bien citadas y analizadas.                             | 1-2 fuentes formales con referencias parciales o poco integradas.                                         | Fuentes no formales predominan o falta citar adecuadamente.                    |  15% |
+| *3. Organización*                       | Introducción, desarrollo y conclusión bien definidas; información fluida y lógica.                             | Presenta estructura pero con fallas en la secuencia o transiciones.                                       | Desorden, falta alguna sección clave o sin lógica clara.                       |  15% |
+| *4. Comunicación Oral y Uso del Tiempo* | Habla con fluidez, volumen y ritmo adecuados; usa términos precisos; no lee guion; exposición dura 15-20 min.  | Dicción aceptable, lee ocasionalmente, términos técnicos poco explicados; tiempo entre 12-15 o 20-23 min. | Lee constantemente, voz poco clara, mal uso de términos; tiempo <12 o >23 min. |  25% |
+| *5. Uso de Recursos Visuales*           | Diapositivas y gráficos claros, bien diseñados y relevantes para la exposición.                                | Uso de recursos con fallos en claridad o diseño; algo de sobrecarga de texto.                             | No usa recursos o estos son confusos y poco útiles.                            |  15% |
+|-----------------------------------------+----------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------+------|
