--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -11,11 +11,20 @@
   como lo refleja la rúbrica, obtiene una calificación un poco más alta)
   el que ustedes me planteen los temas de su interés.
 
-  |------------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------|
-  |      Fecha | Tema                               | Integrantes                                                | Video | Documentos | Preguntas | Evaluación |
-  |------------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------|
-  | 2025.03.25 | Sistemas Operativos de Tiempo Real | David Emilio Nava Benítez y David Emmanuel Tavera Castillo |       |            |           |            |
-  |------------+------------------------------------+------------------------------------------------------------+-------+------------+-----------+------------|
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+-------+------------+-----------+------------|
+  |      Fecha | Tema                                                                                          | Integrantes                                | Video | Documentos | Preguntas | Evaluación |
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+-------+------------+-----------+------------|
+  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera |       |            |           |            |
+  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                               |       |            |           |            |
+  | 2025.03.25 | Docker vs. Virtualización de un SO                                                            | Juan Pablo Vera  y Carlos López Estrada    |       |            |           |            |
+  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                |       |            |           |            |
+  | 2025.04.01 | Sistemas operativos portables                                                                 | Oscar Montiel y Samuel Torres              |       |            |           |            |
+  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla   |       |            |           |            |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                        |       |            |           |            |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado          |       |            |           |            |
+  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena        |       |            |           |            |
+  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                            |       |            |           |            |
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+-------+------------+-----------+------------|
 
 * Rúbrica de evaluación
 
@@ -29,6 +38,13 @@
   - El material presentado debe ser desarrollado íntegramente por el o
     los alumnos expositores (con citas textuales indicadas expresamente)
     o será descalificado.
+
+    Ojo: Reconozco como natural que empleen herramientas generativas de IA para
+    realizar parte de su investigación e incluso para estructurar las ideas,
+    pero /tanto para los documentos como para la presentación/, es indispensable
+    que la autoría (incluyendo redacción y formateo) de sus entregas sea de
+    /ustedes/, no de una herramienta.
+
   - La elección de tema y fecha deben ser acordadas previamente con el
     profesor, con no menos de dos semanas de anticipación.
 
