--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -18,7 +18,7 @@
   | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                               |       |            |           |            |
   | 2025.03.25 | Docker vs. Virtualización de un SO                                                            | Juan Pablo Vera  y Carlos López Estrada    |       |            |           |            |
   | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                |       |            |           |            |
-  | 2025.04.01 | Sistemas operativos portables                                                                 | Oscar Montiel y Samuel Torres              |       |            |           |            |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres              |       |            |           |            |
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla   |       |            |           |            |
   | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                        |       |            |           |            |
   | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado          |       |            |           |            |
