--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -6,23 +6,23 @@
   la última sección de este archivo (/Criterios de evaluación grupal/
   y /por el docente/).
 
-  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+-----------------------------+------------|
-  |      Fecha | Tema                                                                                          | Integrantes                                | Video    | Documentos                  | Evaluación |
-  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+-----------------------------+------------|
-  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]       |            |
-  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                               | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]] |            |
-  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada    |          |                             |            |
-  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                |          |                             |            |
-  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres              |          |                             |            |
-  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla   |          |                             |            |
-  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                        |          |                             |            |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado          |          |                             |            |
-  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena        |          |                             |            |
-  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                            |          |                             |            |
-  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio             |          |                             |            |
-  | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla  |          |                             |            |
-  | 2025.04.21 |                                                                                               | Barvara Juárez                             |          |                             |            |
-  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+-----------------------------+------------|
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+----------------------------------------+------------------------------|
+  |      Fecha | Tema                                                                                          | Integrantes                                | Video    | Documentos                             | Evaluación                   |
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+----------------------------------------+------------------------------|
+  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                  | [[https://encuestas.iiec.unam.mx/362521?lang=es-MX][Evaluación de los compañeros]] |
+  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                               | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]            | [[https://encuestas.iiec.unam.mx/936697?lang=es-MX][Evaluación de los compañeros]] |
+  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada    |          | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]] | [[https://encuestas.iiec.unam.mx/123548?lang=es-MX][Evaluación de los compañeros]] |
+  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                |          |                                        |                              |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres              |          |                                        |                              |
+  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla   |          |                                        |                              |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                        |          |                                        |                              |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado          |          |                                        |                              |
+  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena        |          |                                        |                              |
+  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                            |          |                                        |                              |
+  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio             |          |                                        |                              |
+  | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla  |          |                                        |                              |
+  | 2025.04.21 |                                                                                               | Barvara Juárez                             |          |                                        |                              |
+  |------------+-----------------------------------------------------------------------------------------------+--------------------------------------------+----------+----------------------------------------+------------------------------|
 
 * ¿Y el tema?
 
