Programo otras cuatro exposiciones

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -13,7 +13,6 @@
   | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                   | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/936697?lang=es-MX][Evaluación de los compañeros]] |
   | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]]                                                          | [[https://encuestas.iiec.unam.mx/123548?lang=es-MX][Evaluación de los compañeros]] |
   |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                              |
-  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        |          |                                                                                                 |                              |
   | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    |          |                                                                                                 |                              |
   | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  |          |                                                                                                 |                              |
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       |          |                                                                                                 |                              |
@@ -27,8 +26,15 @@
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                              |
   | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                              |
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                              |
+  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela       |          |                                                                                                 |                              |
+  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila          |          |                                                                                                 |                              |
+  | 2025.05.05 |                                                                                               |                                                |          |                                                                                                 |                              |
+  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana      |          |                                                                                                 |                              |
+  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       |                                                |          |                                                                                                 |                              |
+  | 2025.05.12 |                                                                                               |                                                |          |                                                                                                 |                              |
   |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+------------------------------|
-
+  # El semestre termina el 24 de mayo. Programo exposiciones hasta la semana del 12.
+  # van 33 alumnos que registran tema.
 * ¿Y el tema?
 
   ¿De qué tema presentar su exposición? De algún tema /relacionado con/ la
