Agrego una propuesta de exposición

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -28,7 +28,7 @@
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                              |
   | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela       |          |                                                                                                 |                              |
   | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila          |          |                                                                                                 |                              |
-  | 2025.05.05 |                                                                                               |                                                |          |                                                                                                 |                              |
+  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez               |          |                                                                                                 |                              |
   | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana      |          |                                                                                                 |                              |
   | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       |                                                |          |                                                                                                 |                              |
   | 2025.05.12 |                                                                                               |                                                |          |                                                                                                 |                              |
